<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- App Strings -->
    <string name="app_name">Explorer</string>

    <!-- Options Menu -->
    <string name="menu_settings">Settings</string>
    <string name="menu_new_folder">New Folder</string>
    <string name="dropbox">Dropbox</string>

    <!-- HomeActivity -->
    <string name="removed_msg">was removed</string>
    <string name="not_removed_msg">was not removed</string>
    <string name="not_renamed_msg">Could not be renamed directory/file</string>
    <string name="new_folder_exists_msg">The directory already exists</string>
    <string name="not_new_folder_msg">Could not create new directory</string>

    <!-- ListView Item -->
    <string name="default_dir">home</string>
    <string name="empty_dir">Empty folder</string>
    <string name="default_dir_url">Home</string>
    <string name="default_last_mod">01/01/0001 00:00</string>
    <string name="default_size">100.2kb</string>

    <!-- Colors -->
    <color name="gray">#424242</color>

    <!-- Context Menu -->
    <string name="menu_open">Open</string>
    <string name="menu_remove">Remove</string>
    <string name="menu_rename">Rename</string>
    <string name="menu_copy">Copy</string>
    <string name="menu_move">Move</string>
    <string name="menu_remove_cache">Remove Local Copy</string>
    <string name="menu_update_cache">Update Local Copy</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_refresh">Refresh</string>

    <!-- Remove Alert -->
    <string name="title_remove_alert">Remove</string>
    <string name="remove_msg">Do you really want to remove: </string>

    <!-- Rename Alert -->
    <string name="title_rename_alert">Rename</string>
    <string name="rename_msg">Write the new name</string>

    <!-- New folder Alert -->
    <string name="title_new_folder_alert">New folder</string>
    <string name="new_folder_name_msg">Write the name of the new folder</string>

    <!-- Button Label -->
    <string name="btn_ok">Ok</string>
    <string name="btn_cancel">Cancel</string>

    <!-- Task Dialogs -->
    <string name="update_dir_task_msg">Updating Directory:</string>
    <string name="download_task_msg">Downloading File:</string>
    <string name="create_dir_task_msg">Creating Directory:</string>
    <string name="delete_task_msg">Deleting:</string>
    <string name="copy_task_msg">Copying:</string>
    <string name="move_task_msg">Moving:</string>

    <!-- Task Result Msg -->
    <string name="download_compleated_msg">Download Compleated</string>
    <string name="download_canceled_msg">Download Canceled</string>
    <string name="could_not_create_dir_msg">Couldn\'t create:</string>
    <string name="could_not_delete_msg">Couldn\'t delete:</string>
    <string name="could_not_copy_msg">Couldn\'t copy:</string>
    <string name="could_not_move_msg">Couldn\'t move:</string>
    <string name="lbl_insert_name">Insert new name:</string>
    <string name="hint_name">Name</string>

</resources>