<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/new_folder"
        android:enabled="true"
        android:icon="@android:drawable/ic_menu_add"
        android:title="@string/menu_new_folder"
        android:titleCondensed="@string/menu_new_folder"
        android:visible="true">
    </item>
    <item
        android:id="@+id/config"
        android:enabled="true"
        android:icon="@android:drawable/ic_menu_preferences"
        android:title="@string/menu_settings"
        android:titleCondensed="@string/menu_settings"
        android:visible="true">
    </item>
    <item
        android:id="@+id/menu_logout"
        android:icon="@android:drawable/ic_menu_close_clear_cancel"
        android:title="@string/menu_logout"
        android:titleCondensed="@string/menu_logout">
    </item>
    <item
        android:id="@+id/refresh"
        android:icon="@android:drawable/ic_menu_rotate"
        android:title="@string/menu_refresh"
        android:titleCondensed="@string/menu_refresh">
    </item>

</menu>