<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/new_folder"
        android:enabled="true"
        android:icon="@android:drawable/ic_menu_add"
        android:title="@string/menu_new_folder"
        android:titleCondensed="@string/menu_new_folder"
        android:visible="true">
    </item>
    <item
        android:id="@+id/config"
        android:enabled="true"
        android:icon="@android:drawable/ic_menu_preferences"
        android:title="@string/menu_settings"
        android:titleCondensed="@string/menu_settings"
        android:visible="true">
    </item>
    <item
        android:id="@+id/refresh"
        android:icon="@android:drawable/ic_menu_rotate"
        android:title="@string/menu_refresh"
        android:titleCondensed="@string/menu_refresh">
    </item>
    <!--
    <item
        android:id="@+id/menu_cut"
        android:icon="@drawable/ic_menu_cut"
        android:title="@string/menu_cut"
        android:titleCondensed="@string/menu_cut">
    </item>
    <item
        android:id="@+id/menu_copy"
        android:icon="@drawable/ic_menu_copy"
        android:title="@string/menu_copy"
        android:titleCondensed="@string/menu_copy">
    </item>
    <item
        android:id="@+id/menu_paste"
        android:icon="@drawable/ic_menu_paste"
        android:title="@string/menu_paste"
        android:titleCondensed="@string/menu_paste">
    </item>
    -->

</menu>